# Chillet

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-deploy.yml  pypi-publish.yml  pytest-run.yml
docs/: CNAME  getting-started.md  index.md
docs/css/: logo.css
docs/reference/: clients.md  models.md
docs/usage/: using-clients.md
src/chillet/: __init__.py  clients.py  models.py
tests/: conftest.py  test_async_clients.py  test_context_managers.py  test_docs_scripts.py  test_sync_clients.py
tests/data/: api_samples.json
